# Face_Recognition_Attendance_System

./: .editorconfig  .gitignore  AGENTS.md  CODEX_AUDIT.md  DIRECTORY_MAP.md  MISSION.md  NOTES.md  README.md  RESOURCES.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
docs/: demo-checklist.md  dependency-strategy.md  phase-log.md  project-plan.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx
lessons/: 0001-python-project-anatomy.html  0002-boundary-models.html  0003-sqlite-storage-boundaries.html  0004-camera-capture-loops.html  0005-adapter-pattern-for-vision.html  0006-embeddings-and-enrollment.html  0007-thresholds-and-vectorized-matching.html  0008-multiframe-liveness.html  0009-producer-consumer-backpressure.html  0010-integration-and-configuration.html  0011-hardening-and-review-readiness.html
reference/: pydantic-boundary-models.html  python-project-setup.html  sqlite-storage.html
scripts/: download_models.py  seed_dev_data.py  stream_preview.py
src/face_attendance/: __init__.py  cli.py  contracts.py  model_files.py
src/face_attendance/api/: __init__.py  auth.py  dependencies.py  main.py  streaming.py
src/face_attendance/app/: __init__.py  attend.py  calibrate.py  enroll.py  factory.py  report.py
src/face_attendance/attendance_logging/: __init__.py  service.py
src/face_attendance/capture/: __init__.py  backend_cache.py  camera.py
src/face_attendance/config/: __init__.py  settings.py
src/face_attendance/detection/: __init__.py  base.py  yunet.py
src/face_attendance/embeddings/: __init__.py  base.py  enrollment.py  sface.py
src/face_attendance/liveness/: __init__.py  micro_movement.py
src/face_attendance/matching/: __init__.py  index.py  matcher.py  similarity.py
src/face_attendance/pipeline/: __init__.py  worker.py
src/face_attendance/storage/: __init__.py  database.py
tests/: fakes.py  test_api.py  test_app.py  test_attend_reporting.py  test_attendance_service.py  test_auth.py  test_backend_cache.py  test_calibrate.py  test_capture.py  test_config.py  test_contracts.py  test_detection.py  test_enrollment.py  test_liveness.py  test_matching.py  test_org_scoping.py  test_package_import.py  test_pipeline.py  test_repository_structure.py  test_storage.py  test_stream_preview.py  test_streaming.py
