[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition-attendance-system"
version = "0.1.0"
description = "Secure face-recognition attendance system for the Khizex Python engineering assignment."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Muzzary Babar" }
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pydantic >= 2.0, < 3.0",
]

[project.optional-dependencies]
vision = [
    "numpy >= 1.23",
    "opencv-python >= 4.0",
]
recognition-face-recognition = [
    "face-recognition >= 1.3.0",
]
recognition-insightface = [
    "insightface >= 0.7.0",
    "onnxruntime >= 1.16.0",
]
dev = []

[project.urls]
Repository = "https://github.com/muzzary/Face_Recognition_Attendance_System"

[tool.setuptools.packages.find]
where = ["src"]
